objects/Session__c.object
<CustomObject><fields>
        <fullName>ACF_Additional_Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Presenter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sessions (Additional Presenter)</relationshipLabel>
        <relationshipName>Sessions1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>ACF_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offering</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordType.Id</field>
                <operation>equals</operation>
                <value>012360000012HL6</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Pivotal ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>ACF_Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Session_Date__c</fullName>
        <formula>datevalue ( ACF_Start_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pull just the Date portion of Session Start Date</inlineHelpText>
        <label>Session Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>ACF_Trigger_PB__c</fullName>
        <description>Increments with each push of the [New Session Evaluation response] to trigger the Process Builder which creates a new (empty) Evaluation record for entering session participants' eval responses</description>
        <label>Trigger PB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Timeframes within an offering</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Session</label><nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Sessions</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACF_Start_Date_Time__c</columns>
        <columns>ACF_End_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>